--- a/src/component/card/card.module.scss
+++ b/src/component/card/card.module.scss
@@ -12,79 +12,77 @@
 .wrapper {
   border-radius: 0 0 5px 5px;
   box-shadow: 0 10px 14px 0 #00000012;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-areas:
+                        "image          image"
+                        "available price_info";
   position: relative;
   height: auto;
   max-width: 305px;
   width: 100%;
 }
 
-.product_image_block {
 
-  .product_image {
-    border-radius: 10px 10px 0 0;
-    height: auto;
-    width: 100%;
+.product_image {
+  grid-area: image;
+  border-radius: 10px 10px 0 0;
+  height: auto;
+  width: 100%;
+}
+
+.upper_text_section {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+
+  &__text {
+    @include fonts();
+    color: #F3F3F3;
   }
 
-  .upper_text_section {
-    position: absolute;
-    top: 16px;
-    left: 16px;
-
-    &__text {
-      @include fonts();
-      color: #F3F3F3;
-    }
-
-    &__creator_name {
-      @include fonts(14px, 700);
-    }
+  &__creator_name {
+    @include fonts(14px, 700);
   }
+}
 
-  .low_text_section {
-    position: absolute;
-    bottom: 104px;
-    left: 16px;
+.low_text_section {
+  position: absolute;
+  bottom: 88px;
+  left: 16px;
 
-    &__header {
-      @include fonts(18px);
-    }
+  &__header {
+    @include fonts(18px);
   }
 }
 
 
-.info_tag {
-  display: flex;
-  padding: 10px 16px 16px;
-  justify-content: space-between;
+.info_tag__available_info {
+  grid-area: available;
+  margin: 16px;
+}
 
-  &__available_info {
+.info_tag__text {
+  @include fonts();
+  color: gray;
+}
 
-  }
+.info_tag__quality {
+  @include fonts(16px, 600);
+  color: black;
+}
 
-  &__text {
-    @include fonts();
-    color: gray;
-  }
+.info_tag__text_price {
+  @extend .info_tag__text;
+  text-align: right;
+}
 
-  &__text_price {
-    @extend .info_tag__text;
-    text-align: right;
-  }
+.info_tag__price_info {
+  grid-area: price_info;
+  margin: 16px;
+}
 
-  &__quality {
-    @include fonts(16px, 600);
-    color: black;
-  }
-
-  &__price_info {
-
-  }
-
-  &__price {
-    @include fonts(16px);
-    color: #0040E5;
-  }
+.info_tag__price {
+  @include fonts(16px);
+  text-align: right;
+  color: #0040E5;
 }
