--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,5 +1,9 @@
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 16px;
   margin: 0 auto;
-  width: 333px;
+  max-width: 1380px;
+  width: 100%;
 }
